--- a/application/clients/desktopV2/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.scss
@@ -9,6 +9,17 @@
     float: right;
 }
 
+#ihcl {
+    white-space: nowrap;
+    background-color: #5DB18C;
+    color: #ffffff;
+    padding: 8px 20px 8px 20px;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    display: inline-block;
+}
+
 #fgh {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
