--- a/application/clients/desktopV2/src/app/techarchitecture-manager/techarchitecture-manager.component.html
+++ b/application/clients/desktopV2/src/app/techarchitecture-manager/techarchitecture-manager.component.html
@@ -1,9 +1,8 @@
 <mat-expansion-panel>
-    <!-- <ngx-spinner bdColor="rgba(231,220,220,0.33)" size="small" color="#b2acac" [fullScreen]="true">
-        <img class="loading-image" src='../../assets/img/loading-animation.gif' />
-    </ngx-spinner> -->
     <mat-expansion-panel-header style="padding: 3%;">
-        <mat-panel-title id="heading">Technical Architecture</mat-panel-title>
+        <mat-panel-title id="heading">
+            <h3>Technical Architecture</h3>
+        </mat-panel-title>
     </mat-expansion-panel-header>
     <div style="padding-right: 20px;">
         <div class="container">
