--- a/application/clients/desktopV2/src/app/template-manager/template-manager.component.html
+++ b/application/clients/desktopV2/src/app/template-manager/template-manager.component.html
@@ -1,1 +1,3 @@
-<button class="goToButton btn-space btn_color" mat-raised-button (click)="modifyTemplate()">Modify Template</button>
+<div class="col-md-12 mx-5 p-4">
+    <button class="goToButton btn-space btn_color" mat-raised-button (click)="modifyTemplate()">Modify Template</button>
+</div>
