--- a/application/clients/desktopV2/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.scss
@@ -17,7 +17,25 @@
     font-family: Montserrat, sans-serif;
     font-weight: 500;
     font-size: 20px;
-    display: inline-block;
+}
+
+#ih {
+    white-space: nowrap;
+    color: #5DB18C;
+    border-color: #5DB18C;
+    padding: 8px 20px 8px 20px;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+#po {
+    cursor: pointer;
+    border-radius: 25px;
+}
+
+#po:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #fgh {
