--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -15,9 +15,8 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <div class="row mx-4 pl-5">
-                <div class="col-sm-4" *ngFor="let feature of
-                    projectFeatureData; let i= index">
-                    <div class="card p-2" id="po" [routerLink]="['/feature-details']" [queryParams]="{featureId: feature._id,projectId: project_id}" style="width:25rem; height:9rem;">
+                <div class="col-4" *ngFor="let feature of projectFeatureData; let i= index">
+                    <div class="card p-2" id="po" [routerLink]="['/feature-details']" [queryParams]="{featureId: feature._id,projectId: project_id}" style="width:30rem; height:9rem;">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-4">
@@ -37,7 +36,7 @@
                     <button class="btn" id="ihcl" color="primary" (click)="openFeatureDialog()">Add Features</button>
                 </div>
                 <div class="col-4 mx-5 p-4">
-                    <button class="btn" id="ih" color="primary" (click)="openFeatureDialog()">Feature Library</button>
+                    <button class="btn" id="ih" color="primary" (click)="openFeatureLibrary()">Feature Library</button>
                 </div>
             </div>
         </mat-expansion-panel>
