--- a/application/clients/desktopV2/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.scss
@@ -90,6 +90,14 @@
     width: 100%;
 }
 
+#ser {
+    border-radius: 50px;
+    width: 300px;
+    height: 50px;
+    font-size: 25px;
+    padding: 25px;
+}
+
 #Entry_text_description {
     width: 100%;
     font-family: Montserrat, sans-serif;
