--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -39,14 +39,119 @@
                     <button class="btn" id="ih" color="primary" (click)="openFeatureLibrary()">Feature Library</button>
                 </div>
             </div>
-            <div class="card m-4 p-4" style="width:112rem;height:25rem;" *ngIf="isClick">
+            <div class="card m-4 p-4" style="width:112rem;height:50rem;" *ngIf="isClick">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-8 p-4">
                             <p id="Entry_text_heading">Feature Library</p>
                         </div>
                         <div class="col">
                             <input type="text" class="form-control" name="result" id="ser" placeholder="Search..." [(ngModel)]="result" />
+                        </div>
+                    </div>
+                    <div class="row m-4 p-4">
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/user.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/vault.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/security.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row m-4 p-4">
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/notifications.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/file manager.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/wordpress.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row m-4 p-4">
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/grapesjs.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/grid.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <img src="./assets/images/project_components/connector.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
