--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -57,6 +57,10 @@
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/user.png" alt="">
                                         </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">User</p>
+                                            <p id="Entry_text_description" class="card-text">Management</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -68,6 +72,10 @@
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/vault.png" alt="">
                                         </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">Vault</p>
+                                            <p id="Entry_text_description" class="card-text">Administration</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -78,6 +86,10 @@
                                     <div class="row">
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/security.png" alt="">
+                                        </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">Security</p>
+                                            <p id="Entry_text_description" class="card-text">Manager</p>
                                         </div>
                                     </div>
                                 </div>
@@ -92,6 +104,10 @@
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/notifications.png" alt="">
                                         </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">Notifications</p>
+                                            <p id="Entry_text_description" class="card-text">Gep</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -103,6 +119,10 @@
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/file manager.png" alt="">
                                         </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">File Manager</p>
+                                            <p id="Entry_text_description" class="card-text">Gep</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -113,6 +133,10 @@
                                     <div class="row">
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/wordpress.png" alt="">
+                                        </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">Wordpress</p>
+                                            <p id="Entry_text_description" class="card-text">Administration</p>
                                         </div>
                                     </div>
                                 </div>
@@ -127,6 +151,10 @@
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/grapesjs.png" alt="">
                                         </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">GrapesJs</p>
+                                            <p id="Entry_text_description" class="card-text">Administration</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -138,6 +166,10 @@
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/grid.png" alt="">
                                         </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">Grid</p>
+                                            <p id="Entry_text_description" class="card-text">Connector</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -148,6 +180,10 @@
                                     <div class="row">
                                         <div class="col-lg-4">
                                             <img src="./assets/images/project_components/connector.png" alt="">
+                                        </div>
+                                        <div class="col-lg-8 p-4">
+                                            <p id="Entry_text_heading" class="card-title">Default Icon</p>
+                                            <p id="Entry_text_description" class="card-text">Connector</p>
                                         </div>
                                     </div>
                                 </div>
@@ -163,34 +199,34 @@
                     <h3>Entities</h3>
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div class="row">
-                <div class="col-lg-12">
-                    <button class="btn" id="ihclgr" color="primary">Add Entity</button>
-                </div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-sm-4" *ngFor="let entity of projectEntity; let i= index">
-                    <div class="card">
+            <div class="row mx-4 pl-5">
+                <div class="col-3" *ngFor="let entity of projectEntity; let i= index">
+                    <div class="card p-2" id="op" style="width:27rem; height:12rem;">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <img src="./assets/images/project_components/entity.png" alt="">
+                                    <img src="./assets/images/project_components/entity.png" alt="" style="height:130px;width:100px;">
                                 </div>
-                                <div class="col-lg-8">
+                                <div class="col-lg-8 p-3">
                                     <p id="Entry_text_heading" class="card-title">{{entity.name}}</p>
                                     <p id="Entry_text_description" class="card-text">{{entity.description}}</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-6 ">
-                                    <button class="btn btn-block btn-outline-primary w-100 mt-3" (click)="editEntityField(entity)" type="button">Edit</button>
-                                </div>
-                                <div class="col-lg-6">
-                                    <button class="btn btn-block btn-outline-danger w-100 mt-3" [disabled]="entity.is_default" (click)="openDeleteModel(entity)" type="button">Delete</button>
+                                    <div class="row pt-3">
+                                        <div class="col-lg-3">
+                                            <button class="btn btn-link" id="ent1" (click)="editEntityField(entity)">Edit</button>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <button class="btn btn-link" id="ent2" [disabled]="entity.is_default" (click)="openDeleteModel(entity)">Delete</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-1 mx-4 p-4">
+                    <button class="btn" id="ihcl" color="primary">Add Entity</button>
                 </div>
             </div>
         </mat-expansion-panel>
