--- a/generator/services/React-Template-managerV1702/templates/AppComponentTs.handlebars
+++ b/generator/services/React-Template-managerV1702/templates/AppComponentTs.handlebars
@@ -12,7 +12,7 @@ const App = () => {
             exact
             path={prop.path}
             key={key}
-            render={(props) => <Component {...prop} {...props} />}
+            render={(props:any) => <Component {...prop} {...props} />}
           />
         );
     });
