--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -16,7 +16,7 @@
             </mat-expansion-panel-header>
             <div class="row mx-4 pl-5">
                 <div class="col-4" *ngFor="let feature of projectFeatureData; let i= index">
-                    <div class="card p-2" id="po" [routerLink]="['/feature-details']" [queryParams]="{featureId: feature._id,projectId: project_id}" style="width:30rem; height:9rem;">
+                    <div class="card mt-3 p-2" id="po" [routerLink]="['/feature-details']" [queryParams]="{featureId: feature._id,projectId: project_id}" style="width:30rem; height:9rem;">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-4">
@@ -201,7 +201,7 @@
             </mat-expansion-panel-header>
             <div class="row mx-4 pl-5">
                 <div class="col-3" *ngFor="let entity of projectEntity; let i= index">
-                    <div class="card p-2" id="op" style="width:27rem; height:12rem;">
+                    <div class="card mt-3 p-2" id="op" style="width:27rem; height:12rem;">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-4">
@@ -295,18 +295,16 @@
 </div>
 
 <!-- To Delete Entity Popup model -->
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top':
-    '100px','display':deletePopup}">
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top':'100px','display':deletePopup}">
     <div class="modal-dialog modal-sm" role="dialog">
         <div class="modal-content">
             <div class="delete modal-body">
-                <p>Please confirm to delete this entity ? </p>
+                <p>Are you sure to delete this entity?</p>
             </div>
             <div class="modal-footer" style="padding: 5px">
                 <button type="button" class="btn btn-default" (click)="deleteEntityById()">Confirm</button> &nbsp;
                 <button type="button" class="btn btn-default" (click)="closeDeleteModel()">Cancel</button>
             </div>
         </div>
-
     </div>
 </div>
