--- a/generator/services/Angular-Template-managerV10/templates/Dockerfile.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/Dockerfile.handlebars
@@ -9,5 +9,10 @@ RUN npm install -g @angular/cli@7.3.9
 RUN npm install -g serve
 RUN npm install -g concurrently
 RUN npm upgrade -g @angular/cli
-CMD ng build  --output-hashing all && concurrently "ng build --watch" "serve dist/{{fileName}}"
-EXPOSE 5000
+RUN ng build  --output-hashing all
+
+FROM nginx:alpine
+RUN rm -rf /usr/share/nginx/html/* && rm -rf /etc/nginx/nginx.conf
+COPY --from=build /app/dist/{{fileName}} /usr/share/nginx/html
+COPY /nginx/nginx.conf /etc/nginx/nginx.conf
+CMD ["nginx", "-g", "daemon off;"]
