--- a/generator/services/Angular-Template-managerV10/templates/Dockerfile.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/Dockerfile.handlebars
@@ -1,4 +1,4 @@
-FROM node:14.11.0-alpine
+FROM node:14.11.0-alpine as build
 COPY . /app
 WORKDIR /app
 RUN npm install --save node-sass@4.14.1 --unsafe-perm=true --allow-root
