about page and open source attribution page

--- a/application/clients/desktopV2/src/app/header/header.component.html
+++ b/application/clients/desktopV2/src/app/header/header.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 </nav>
-<div class="modal" id="model1" tabindex="-1" role="dialog" [ngStyle]="{'top':
+<!-- <div class="modal" id="model1" tabindex="-1" role="dialog" [ngStyle]="{'top':
   '100px','display':'none'}">
     <section class="gpd-section" id="igsgh">
         <div class="gpd-container gpd-cnt">
@@ -74,4 +74,4 @@
             </div>
         </div>
     </section>
-</div>
+</div> -->
