--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -35,11 +35,11 @@
                 <div class="col-1 mx-4 p-4">
                     <button class="btn" id="ihcl" color="primary" (click)="openFeatureDialog()">Add Features</button>
                 </div>
-                <div class="col-4 mx-5 p-4">
+                <div class="col-8 mx-5 p-4">
                     <button class="btn" id="ih" color="primary" (click)="openFeatureLibrary()">Feature Library</button>
                 </div>
             </div>
-            <div class="card m-4 p-4" style="width:112rem;height:50rem;" *ngIf="isClick">
+            <div class="card m-4 p-4" style="width:auto;height:auto;" *ngIf="isClick">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-8 p-4">
@@ -50,15 +50,15 @@
                         </div>
                     </div>
                     <div class="row m-4 p-4">
-                        <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                        <div class="col-sm-4" *ngFor="let shared of getAllSharableFeatueData ; let i= index">
+                            <div class="card p-2 card_align" id="po"  >
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
-                                            <img src="./assets/images/shareable_features/user.png" alt="">
+                                            <img src="../../assets/images/shareable_features/{{shared.feature_name}}.png" alt="">
                                         </div>
                                         <div class="col-lg-8 p-4">
-                                            <p id="Entry_text_heading" class="card-title">User</p>
+                                            <p id="Entry_text_heading" class="card-title">{{shared.feature_name}}</p>
                                             <p id="Entry_text_description" class="card-text">Management</p>
                                         </div>
                                     </div>
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:auto; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:autp; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -94,11 +94,11 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
-                    <div class="row m-4 p-4">
+                     <div class="row m-4 p-4">
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:auto; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:auto; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:auto; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -145,7 +145,7 @@
                     </div>
                     <div class="row m-4 p-4">
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:auto; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -160,7 +160,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:auto; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="card p-2" id="po" style="width:30rem; height:9rem;">
+                            <div class="card p-2" id="po" style="width:auto; height:auto;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-lg-4">
