--- a/application/clients/desktopV2/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
+
 #ihclgr {
     white-space: nowrap;
     background-color: #5DB18C;
@@ -162,3 +163,12 @@
 }
 
 @media (max-width: 768px) {}
+
+.card_align{
+    width: auto; height: 200px;
+}
+.col-sm-4{
+    flex: 0 0 auto;
+    width: 33.333333%;
+    height: 225px;
+}
