--- a/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.html
@@ -105,7 +105,7 @@
     <div class="modal-dialog modal-sm" role="dialog">
         <div class="modal-content">
             <div class="delete modal-body">
-                <p>Please click confirm to delete this project ?</p>
+                <p>Please click confirm to delete this entity</p>
             </div>
             <div class="modal-footer" style="padding: 5px">
                 <button type="button" class="btn btn-default" (click)="deleteEntityById()">Confirm</button> &nbsp;
