to adding minor bug and adding shared feature mananger updating

--- a/generator/services/auth-gen-manager/template/gcamresources.handlebars
+++ b/generator/services/auth-gen-manager/template/gcamresources.handlebars
@@ -447,7 +447,7 @@ export const resource_types = [
   {{#if arrayData}}
   {{#each arrayData}}
   {
-    "resource_name": "{{resources}}"
+    "resource_name": "{{resources}}",
     "resource_type": "screen",
     "roles": [
       "admin", "{{role}}"
