alignment issue with shareable features

--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -94,7 +94,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div> 
                     </div>
                      <div class="row m-4 p-4">
                         <div class="col-sm-4">
