--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -59,7 +59,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Only one AgGrid per screen works at the moment!</p>
+                <p>Only one AgGrid per screen is allowed at the moment!</p>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-danger" (click)="closeGrid()">Close</button>
