Shareable UI & TagManager

--- a/application/clients/desktopV2/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.scss
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
-
 #ihclgr {
     white-space: nowrap;
     background-color: #5DB18C;
@@ -19,17 +18,19 @@
     font-weight: 500;
     font-size: 20px;
 }
-.m-4{
+
+.m-4 {
     margin: 1.5rem!important;
 }
+
 .p-4 {
     padding: 0.4rem !important;
-    
-  }
+}
+
 //   .mx-5 {
-    // padding: 0 1.75em 0 0;
-    // margin-right: -36rem!important;
-    // padding: 1px 0.75em 0 0;
+// padding: 0 1.75em 0 0;
+// margin-right: -36rem!important;
+// padding: 1px 0.75em 0 0;
 // }
 #ih {
     white-space: nowrap;
@@ -49,7 +50,6 @@
     justify-content: center;
     flex: 1 1 auto;
     padding: 1rem 1rem;
-    
 }
 
 #op {
@@ -157,8 +157,7 @@
     width: 100%;
     font-family: Montserrat, sans-serif;
     color: #302C5E;
-    font-size: 21px;
-    font-weight: bold;
+    font-size: 25px;
     padding: 0 0 0 10px;
 }
 
@@ -182,10 +181,12 @@
 
 @media (max-width: 768px) {}
 
-.card_align{
-    width: auto; height: 200px;
+.card_align {
+    width: auto;
+    height: 200px;
 }
-.col-sm-4{
+
+.col-sm-4 {
     flex: 0 0 auto;
     width: 33.333333%;
     height: 225px;
