--- a/application/clients/desktop/src/assets/templates/architecture-template/styles/nav-style.css
+++ b/application/clients/desktop/src/assets/templates/architecture-template/styles/nav-style.css
@@ -711,7 +711,7 @@ body {
 #icrvgp {
     padding: 5px 0 5px 20px;
     background-color: black;
-    height: 50px;
+    /* height: 50px; */
     flex: 1 1 100%;
 }
 
