--- a/application/clients/desktopV2/src/app/template-manager/template-manager.component.html
+++ b/application/clients/desktopV2/src/app/template-manager/template-manager.component.html
@@ -1,3 +1,61 @@
-<div class="col-md-12 mx-5 p-4">
-    <button class="goToButton btn-space btn_color" mat-raised-button (click)="modifyTemplate()">Modify Template</button>
+<div class="row mt-4">
+    <div class="col-1 mx-5 p-4">
+        <button class="goToButton btn-space btn_color" mat-raised-button (click)="modifyTemplate()">Modify Template</button>
+    </div>
+    <div class="col-1 mx-5 p-4">
+        <button class="goToButton btn-space btn_color" mat-raised-button (click)="changeTemplate()">Change Template</button>
+    </div>
+    <div class="col-1 mx-5 p-4">
+        <button class="goToButton btn-space btn_color" mat-raised-button (click)="createTemplate()">Create Template</button>
+    </div>
+</div>
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayTemplateModel}">
+    <div class="modal-dialog modal-lg" role="dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="container" style="background-color:#f7f6f6">
+                    <form action="">
+                        <div class="row">
+                            <div class="col-md-6" *ngFor="let template of gepTemplates;let i = index">
+                                <div class="card p-2 m-2" id="card_temp">
+                                    <div class="sitecard_template">
+                                        <div (click)="onPreviewClick(template)" class="height-60 mt-5">
+                                            <mat-icon>preview</mat-icon> <span style="font-size: 26px">Preview</span>
+                                        </div>
+                                        <div class="height-60" (click)="onTemplateSelect(template)">
+                                            <mat-icon>check_circle_outline</mat-icon> <span style="font-size: 26px">Select</span>
+                                        </div>
+                                    </div>
+                                    <img class="select_template_image" src="{{template.template_image[0].image}}" alt=" ">
+                                    <div class="container" style="position: absolute;top:225px">
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <p style="color: black;font-weight:bolder;">{{template.name}}</p>
+                                            </div>
+                                            <div class="col-lg-12">
+                                                <p style="color: white"> Created On: --
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="d-flex justify-content-center">
+                            <div class="p-2">
+                                <button id="template_btn" class="btn btn-success" (click)="onCloseHandled()">{{'PROJECT.CANCEL_BTN' | translate}}</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
