--- a/application/clients/desktopV2/src/app/template-manager/template-manager.component.scss
+++ b/application/clients/desktopV2/src/app/template-manager/template-manager.component.scss
@@ -12,3 +12,111 @@
     background-color: #39a521;
     border-bottom: 3px solid #2d831a;
 }
+
+.card_image {
+    padding: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
+}
+
+.card-img-top {
+    border-top-left-radius: 2%;
+    border-top-right-radius: 2%;
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
+}
+
+.select_template_image {
+    padding: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+}
+
+.sitecard__overlay {
+    background-color: rgba(0, 0, 0, .75);
+    width: 100%;
+    height: 90%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: 10;
+    color: #fff;
+    font-size: 1rem;
+    text-align: center;
+    line-height: 150px;
+    opacity: 0;
+    cursor: pointer;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s;
+    text-transform: uppercase;
+    letter-spacing: 3px
+}
+
+.height-60 {
+    height: 60px;
+}
+
+.sitecard-preview-c:hover .sitecard-preview {
+    -webkit-filter: blur(3px);
+    filter: blur(3px);
+    -webkit-transform: scale(1.07);
+    transform: scale(1.07)
+}
+
+.sitecard__overlay:hover {
+    opacity: 0.75
+}
+
+.sitecard_template {
+    @extend .sitecard__overlay;
+    line-height: 0px !important;
+    padding: 33px 0px 0px 0px;
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 88%
+    }
+    #mat_body {
+        margin-left: 18px;
+    }
+    #i0tser {
+        font-size: 16px;
+    }
+    #i0tse {
+        font-size: 16px;
+    }
+    .card-img-top {
+        border-top-left-radius: 2%;
+        border-top-right-radius: 2%;
+        width: 100%;
+        height: 90vw;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 415px) {
+    .container {
+        width: 88%
+    }
+    #mat_body {
+        margin-left: 18px;
+    }
+    #i0tser {
+        font-size: 16px;
+    }
+    #i0tse {
+        font-size: 16px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        width: 100%;
+    }
+}
