--- a/application/clients/desktopV2/src/app/footer/footer.component.scss
+++ b/application/clients/desktopV2/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 #i35mb-2 {
     background-color: #000001;
-    padding: 40px 0 40px 0;
-    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    margin: 70px 0 0 0;
     background-image: url('/assets/images/header/footer_icon.png'), linear-gradient(to right, #121732 0%, #000000 100%);
     background-repeat: no-repeat, repeat;
     background-position: center center, left top;
