--- a/application/clients/desktopV2/src/app/about/about.component.scss
+++ b/application/clients/desktopV2/src/app/about/about.component.scss
@@ -15,6 +15,8 @@
     font-weight: 700;
     color: #302C5E;
     font-size: 18px;
+    padding: 0 0 0 175px;
+    margin: 0 0 10px 0;
 }
 #it9sw {
     text-align: center;
