--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -79,11 +79,11 @@
             </mat-expansion-panel-header>
             <div class="row mx-4 pl-5">
                 <div class="col-3" *ngFor="let entity of projectEntity; let i= index">
-                    <div class="card mt-3 p-2" id="op" style="width:27rem; height:12rem;">
+                    <div class="card mt-3 p-2" id="op" style="width:auto; height:auto;">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <img src="./assets/images/project_components/entity.png" alt="" style="height:130px;width:100px;">
+                                    <img src="./assets/images/project_components/entity.png" alt="" style="height: 125px;width:95px;">
                                 </div>
                                 <div class="col-lg-8 p-3">
                                     <p id="Entry_text_heading" class="card-title">{{entity.name}}</p>
