New Alignment issue

--- a/application/clients/desktopV2/src/styles.scss
+++ b/application/clients/desktopV2/src/styles.scss
@@ -122,7 +122,7 @@ body {
 //   // border-radius: 34px !important;
 //   text-align: center !important;
 // }
-.mat-expansion-panel-body {
-  padding: 0 24px 16px 0 !important;
-  margin: 0 -65px 0 0 !important;
-}
+// .mat-expansion-panel-body {
+//   padding: 0 24px 16px 0 !important;
+//   margin: 0 -65px 0 0 !important;
+// }
