--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -16,7 +16,7 @@
             </mat-expansion-panel-header>
             <div class="row mx-4 pl-5">
                 <div class="col-4" *ngFor="let feature of projectFeatureData; let i= index">
-                    <div class="card mt-3 p-2" id="po" [routerLink]="['/feature-details']" [queryParams]="{featureId: feature._id,projectId: project_id}" style="width:30rem; height:9rem;">
+                    <div class="card mt-3 p-2" id="po" [routerLink]="['/feature-details']" [queryParams]="{featureId: feature._id,projectId: project_id}" style="width:auto; height:auto;">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-4">
