--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -20,6 +20,11 @@
                         <small *ngIf="screenNameExist" style="font-style: italic;color: red;">Screen Name already exists!</small>
                     </div>
                 </div>
+                <div class="form-group row">
+                    <div class="col-sm-8">
+
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" (click)="closeScreeName()">Close</button>
